# extensible

./: CMakeLists.txt  README.md  application.cpp  itest.h  test_extension1.cpp  test_extension2.cpp
include/: extensible.h  extensible_export.h  extension.h  global.h  iextension.h  manager.h  server.h  shared_object.h  version.h
include/extensible/: extensible_export.h  extension.h  shared_object.h
include/szabi/: extensible.h
include/szabi/extensible/: iextension.h  manager.h  server.h  version.h
src/: manager.cpp  shared_object.cpp  version.cpp
src/unix/: shared_object.cpp.inc
src/windows/: shared_object.cpp.inc
